sidecar/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: iptables_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 15001 }
    listener_filters:
      name: envoy.listener.original_dst
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: iptables
          codec_type: auto
          generate_request_id: true
          tracing:
            operation_name: egress
          route_config:
              name: iptables_route
              virtual_hosts:
              - name: iptables_vhost
                domains: ["*"]
                routes:
                - match: { prefix: "/" }
                  route: { cluster: iptables_cluster }
          http_filters:
            - name: envoy.router

  clusters:
  - name: iptables_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB

  - name: zipkin_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: zipkin
        port_value: 9411

tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin_cluster
      collector_endpoint: "/api/v1/spans"
